populating site pages

--- a/docs.html
+++ b/docs.html
@@ -21,7 +21,7 @@
           <a href="./demo/index.html">Demo</a>
         </div>
         <div class="content">
-          <h2>Pricing Information Here</h2>
+          <h2>Documentation Here</h2>
         </div>
       </main>
       <div class="footer">
