--- a/index.html
+++ b/index.html
@@ -15,31 +15,10 @@
         <div id="header" class="header">
           <img id="logo-img" src="img/logo_white.png" alt="">
           <a href="#" id="logo">Tool Host</a>
-          <div id="navbar" class="navbar">
-            <div class="dropdown">
-              <a href="./products.html" class="dropbtn">Products</a>
-              <div class="dropdown-content">
-                  <a class="dropdown-item" href="#">Linear Modelling</a>
-                  <a class="dropdown-item" href="#">Optimisation</a>
-                </div>
-            </div>
-            <div class="">
-              <a href="#" class="dropbtn">Pricing</a>
-            </div>
-            <div class="dropdown">
-              <a href="#" class="dropbtn">Library</a>
-              <div class="dropdown-content">
-                  <a class="dropdown-item" href="#">generic</a>
-                  <a class="dropdown-item" href="#">modelling</a>
-              </div>
-            </div>
-            <div>
-              <a href="#" class="dropbtn">About</a>
-            </div>
-            <div>
-              <a href="./demo/index.html" class="account">Demo</a>
-            </div>
-          </div>
+          <a href="./products.html">Products</a>
+          <a href="./pricing.html">Pricing</a>
+          <a href="./docs.html">Doc's</a>
+          <a href="./demo/index.html">Demo</a>
         </div>
         <div class="content">
           <div class="home-row">
@@ -48,11 +27,7 @@
             </div>
             <div class="desc-col">
               <p class="home-desc">
-                A Data Science Tool-Kit for building
-                <br>
-                <span>Linear Models</span>, <span>Visualisations</span>,
-                <br>
-                <span>Forecasting</span> and <span>Optimisation.</span>
+                Simple tools for building Models, Reports, and Optimisation.
             </p>
           </div>
         </div>
@@ -60,8 +35,8 @@
           <div class="home-row">
             <div class="desc2">
               <h2>&#9757; One Unified Framework</h2>
-              <h4>A single to tool to run models, produce visualisation and run optimisations</h4>
-              <p>Being able to simultaneously build models, visualise and present results keeps the analytical side of projects efficient and effective.</p>
+              <h4>A single suite to run models, produce reports and run optimisations</h4>
+              <p>Deliver efficient and effective analytics by simultaneously building models and presenting results.</p>
             </div>
           </div>
           <hr>
@@ -69,21 +44,29 @@
             <div class="desc2">
               <h2>&#128195; Documentation</h2>
               <h4>Learning, troubleshooting and transparency</h4>
-              <p>Access to documentation of the undelying open-source libraries grants complete control of the tool.</p>
+              <p>Access to documentation of the tools and undelying open-source libraries for complete control of your projects.</p>
             </div>
           </div>
           <hr>
           <div class="home-row">
             <div class="desc2">
-              <h2>&#127856; Easily Build Complex Models </h2>
-              <h4>A few clicks away from building sophisticated models.</h4>
-              <p>Build models </p>
+              <h2>&#127891; Sophisticated Models</h2>
+              <h4>A few clicks away from building complex models.</h4>
+              <p>The user friendly interface makes modelling easy, accessible and crazy fast.</p>
             </div>
           </div>
           <hr>
           <div class="home-row">
             <div class="desc2">
-              <h2>&#129300; Gain A Deeper Understanding</h2>
+              <h2>&#128640; Optimise Your Strategy</h2>
+              <h4>Identify the best actions using your data.</h4>
+              <p>Test multiple combinations of different scenarios in seconds.</p>
+            </div>
+          </div>
+          <hr>
+          <div class="home-row">
+            <div class="desc2">
+              <h2>&#128202; Visualise your insights</h2>
               <h4>Quickly identify the logical next step in the analysis is.</h4>
               <p>Test multiple combinations of different scenarios in seconds.</p>
             </div>
