--- a/products.html
+++ b/products.html
@@ -14,7 +14,7 @@
       <main id="container">
         <div id="header" class="header">
           <img id="logo-img" src="img/logo_white.png" alt="">
-          <a href="#" id="logo">Tool Host</a>
+          <a href="./index.html" id="logo">Tool Host</a>
           <a href="./products.html">Products</a>
           <a href="./pricing.html">Pricing</a>
           <a href="./docs.html">Doc's</a>
