footer and title

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <main id="container">
         <div id="header" class="header">
           <img id="logo-img" src="img/logo_white.png" alt="">
-          <a href="./index.html" id="logo">Tool Host</a>
+          <a href="./index.html" id="logo">Tool-Host</a>
           <a href="./products.html">Products</a>
           <a href="./pricing.html">Pricing</a>
           <a href="./docs.html">Doc's</a>
@@ -74,7 +74,7 @@
         </div>
       </main>
       <div class="footer">
-        Tool Host &copy; 2021
+        Tool Host &copy; 2021 - London, UK - Contact: <a href='mailto:info@tool-host.com'>info@tool-host.com</a>
       </div>
       <script type="text/javascript" src="js/script.js">
 
