--- a/index.html
+++ b/index.html
@@ -1,83 +1,86 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <title>Tool Host</title>
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="preconnect" href="https://fonts.gstatic.com">
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat+Alternates:wght@600&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@700;600;300;&display=swap" rel="stylesheet">
-    <link rel="shortcut icon" href="img/logo_white.png" type="image/x-icon" />
 
-  </head>
-    <body>
-      <main id="container">
-        <div id="header" class="header">
-          <img id="logo-img" src="img/logo_white.png" alt="">
-          <a href="./index.html" id="logo">Tool-Host</a>
-          <a href="./products.html">Products</a>
-          <a href="./pricing.html">Pricing</a>
-          <a href="./docs.html">Doc's</a>
-          <a href="./demo/index.html">Demo</a>
+<head>
+  <meta charset="utf-8">
+  <title>Tool Host</title>
+  <link rel="stylesheet" href="css/style.css">
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat+Alternates:wght@600&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@700;600;300;&display=swap" rel="stylesheet">
+  <link rel="shortcut icon" href="img/logo_white.png" type="image/x-icon" />
+
+</head>
+
+<body>
+  <main id="container">
+    <div id="header" class="header">
+      <a href="./index.html" id="logo">Tool-Host</a>
+      <a href="./products.html">Products</a>
+      <a href="./pricing.html">Pricing</a>
+      <a href="./docs.html">Doc's</a>
+      <a href="./demo/index.html">Demo</a>
+    </div>
+    <div class="content">
+      <div class="home-row-1">
+        <div class="desc-icons">
+          <img src="img/logo.png" alt="logo">
         </div>
-        <div class="content">
-          <div class="home-row">
-            <div class="desc-icons">
-              <img src="img/logo.png" alt="logo">
-            </div>
-            <div class="desc-col">
-              <p class="home-desc">
-                Simple tools for building Models, Reports, and Optimisation.
-            </p>
-          </div>
+        <div class="desc-col">
+          <p class="home-desc">
+            <span>Simple Tools</span>
+            for building
+            <span>Models</span>,
+            <span>Reports</span>, and
+            <span>Optimisation</span>.
+          </p>
         </div>
-          <hr>
-          <div class="home-row">
-            <div class="desc2">
-              <h2>&#9757; One Unified Framework</h2>
-              <h4>A single suite to run models, produce reports and run optimisations</h4>
-              <p>Deliver efficient and effective analytics by simultaneously building models and presenting results.</p>
-            </div>
-          </div>
-          <hr>
-          <div class="home-row">
-            <div class="desc2">
-              <h2>&#128195; Documentation</h2>
-              <h4>Learning, troubleshooting and transparency</h4>
-              <p>Access to documentation of the tools and undelying open-source libraries for complete control of your projects.</p>
-            </div>
-          </div>
-          <hr>
-          <div class="home-row">
-            <div class="desc2">
-              <h2>&#127891; Sophisticated Models</h2>
-              <h4>A few clicks away from building complex models.</h4>
-              <p>The user friendly interface makes modelling easy, accessible and crazy fast.</p>
-            </div>
-          </div>
-          <hr>
-          <div class="home-row">
-            <div class="desc2">
-              <h2>&#128640; Optimise Your Strategy</h2>
-              <h4>Identify the best actions using your data.</h4>
-              <p>Test multiple combinations of different scenarios in seconds.</p>
-            </div>
-          </div>
-          <hr>
-          <div class="home-row">
-            <div class="desc2">
-              <h2>&#128202; Visualise your insights</h2>
-              <h4>Quickly identify the logical next step in the analysis is.</h4>
-              <p>Test multiple combinations of different scenarios in seconds.</p>
-            </div>
-          </div>
-        </div>
-      </main>
-      <div class="footer">
-        Tool Host &copy; 2021 - London, UK - Contact: <a href='mailto:info@tool-host.com'>info@tool-host.com</a>
       </div>
-      <script type="text/javascript" src="js/script.js">
 
-      </script>
-  </body>
+      <div class="home-row">
+        <div class="desc2">
+          <h2>&#128195; Documentation</h2>
+          <h4>Learning, troubleshooting and transparency</h4>
+          <p>Access to documentation of the tools and undelying open-source libraries for complete control of your analyses and projects.</p>
+        </div>
+        <div class="desc2">
+          <h2>&#127852; Demo</h2>
+          <h4>Try out the live demo and have a reach out with any questions</h4>
+          <p>Test the tools in their live environment and have a play with all the features available.</p>
+        </div>
+      </div>
+      <div class="home-row">
+        <div class="desc2">
+          <h2>&#9757; One Unified Framework</h2>
+          <h4>A single suite to run models, produce reports and run optimisations</h4>
+          <p>Deliver efficient and effective analytics by simultaneously building models and presenting results.</p>
+        </div>
+        <div class="desc2">
+          <h2>&#127891; Sophisticated Models</h2>
+          <h4>A few clicks away from building complex models.</h4>
+          <p>The user friendly interface makes modelling easy, accessible and crazy fast.</p>
+        </div>
+      </div>
+      <div class="home-row">
+        <div class="desc2">
+          <h2>&#128640; Optimise Your Strategy</h2>
+          <h4>Identify the best actions using your data.</h4>
+          <p>Test multiple combinations of different scenarios in seconds.</p>
+        </div>
+        <div class="desc2">
+          <h2>&#128202; Visualise your insights</h2>
+          <h4>Quickly identify the logical next step in the analysis is.</h4>
+          <p>Test multiple combinations of different scenarios in seconds.</p>
+        </div>
+      </div>
+    </div>
+  </main>
+  <div class="footer">
+    Tool Host &copy; 2021 - London, UK - Contact: <a href='mailto:info@tool-host.com'>info@tool-host.com</a>
+  </div>
+  <script type="text/javascript" src="js/script.js">
+
+  </script>
+</body>
+
 </html>
