--- a/docs.html
+++ b/docs.html
@@ -13,7 +13,8 @@
     <body>
       <main id="container">
         <div id="header" class="header">
-          <a href="./index.html" id="logo">Tool-Host</a>
+          <a href="./index.html" class="logo">Tool-Host</a>
+          <a href="./index.html">Home</a>
           <a href="./products.html">Products</a>
           <a href="./pricing.html">Pricing</a>
           <a href="./docs.html">Doc's</a>
