--- a/index.html
+++ b/index.html
@@ -15,14 +15,15 @@
 <body>
   <main id="container">
     <div id="header" class="header">
-      <a href="./index.html" id="logo">Tool-Host</a>
+      <a href="./index.html" class="logo">Tool-Host</a>
+      <a href="./index.html">Home</a>
       <a href="./products.html">Products</a>
       <a href="./pricing.html">Pricing</a>
       <a href="./docs.html">Doc's</a>
       <a href="./demo/index.html">Demo</a>
     </div>
     <div class="content">
-      <div class="home-row-1">
+      <div class="row-1">
         <div class="desc-icons">
           <img src="img/logo.png" alt="logo">
         </div>
@@ -37,21 +38,27 @@
         </div>
       </div>
 
-      <div class="home-row">
+      <div class="row">
         <div class="desc2">
-          <h2>&#128195; Documentation</h2>
-          <h4>Learning, troubleshooting and transparency</h4>
-          <p>Access to documentation of the tools and undelying open-source libraries for complete control of your analyses and projects.</p>
-        </div>
-        <div class="desc2">
-          <h2>&#127852; Demo</h2>
+          <a href="./demo/index.html">
+            <h2>&#127852; Demo</h2>
+          </a>
           <h4>Try out the live demo and have a reach out with any questions</h4>
           <p>Test the tools in their live environment and have a play with all the features available.</p>
         </div>
-      </div>
-      <div class="home-row">
         <div class="desc2">
-          <h2>&#9757; One Unified Framework</h2>
+          <a href="./docs.html">
+            <h2>&#128195; Documentation</h2>
+          </a>
+          <h4>Learning, troubleshooting and transparency</h4>
+          <p>Access to documentation of the tools and undelying open-source libraries for complete control of your analyses and projects.</p>
+        </div>
+      </div>
+      <div class="row">
+        <div class="desc2">
+          <a href="./products.html">
+            <h2>&#9757; One Unified Framework</h2>
+          </a>
           <h4>A single suite to run models, produce reports and run optimisations</h4>
           <p>Deliver efficient and effective analytics by simultaneously building models and presenting results.</p>
         </div>
@@ -61,14 +68,14 @@
           <p>The user friendly interface makes modelling easy, accessible and crazy fast.</p>
         </div>
       </div>
-      <div class="home-row">
+      <div class="row">
         <div class="desc2">
           <h2>&#128640; Optimise Your Strategy</h2>
           <h4>Identify the best actions using your data.</h4>
           <p>Test multiple combinations of different scenarios in seconds.</p>
         </div>
         <div class="desc2">
-          <h2>&#128202; Visualise your insights</h2>
+          <h2>&#128202; Visualise Your Insights</h2>
           <h4>Quickly identify the logical next step in the analysis is.</h4>
           <p>Test multiple combinations of different scenarios in seconds.</p>
         </div>
