--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
   <meta charset="utf-8">
   <title>Tool Host</title>
   <link rel="stylesheet" href="css/style.css">
-  <link rel="preconnect" href="https://fonts.gstatic.com">
-  <link href="https://fonts.googleapis.com/css2?family=Montserrat+Alternates:wght@600&display=swap" rel="stylesheet">
-  <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@700;600;300;&display=swap" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@200;300;500;800&display=swap" rel="stylesheet">
   <link rel="shortcut icon" href="img/logo_white.png" type="image/x-icon" />
 
 </head>
@@ -15,24 +15,34 @@
 <body>
   <main id="container">
     <div id="header" class="header">
-      <a href="./index.html" id="logo">Tool-Host</a>
-      <a href="./products.html">Products</a>
-      <a href="./pricing.html">Pricing</a>
-      <a href="./docs.html">Doc's</a>
-      <a href="./demo/index.html">Demo</a>
+      <a href="./index.html" id="logo">
+        <img src="img/logo_white_wide.png" alt="logo">
+      </a>
+      <a href="./products.html">PRODUCTS</a>
+      <a href="./pricing.html">PRICING</a>
+      <a href="./docs.html">DOC'S</a>
+      <a href="./demo/index.html">DEMO</a>
     </div>
     <div class="content">
       <div class="home-row-1">
         <div class="desc-icons">
-          <img src="img/logo.png" alt="logo">
+          <img src="img/logo_lilla.png" alt="logo">
         </div>
         <div class="desc-col">
+          <div class="wrapper">
+            <div class="cloud-container">
+              <div class="cloud"></div>
+              <div class="cloud"></div>
+              <div class="cloud"></div>
+            </div>
+
+          </div>
+
+
           <p class="home-desc">
-            <span>Simple Tools</span>
-            for building
             <span>Models</span>,
-            <span>Reports</span>, and
-            <span>Optimisation</span>.
+            <span>Dashboards</span>, and
+            more...
           </p>
         </div>
       </div>
@@ -41,12 +51,12 @@
         <div class="desc2">
           <h2>&#128195; Documentation</h2>
           <h4>Learning, troubleshooting and transparency</h4>
-          <p>Access to documentation of the tools and undelying open-source libraries for complete control of your analyses and projects.</p>
+          <p>Start at the GETTING STARTED page and access the documentation of the tools and code libraries for complete control of your analyses and projects.</p>
         </div>
         <div class="desc2">
           <h2>&#127852; Demo</h2>
-          <h4>Try out the live demo and have a reach out with any questions</h4>
-          <p>Test the tools in their live environment and have a play with all the features available.</p>
+          <h4>Try out the live demo and reach out with any questions!</h4>
+          <p>Test the tools in their live environment and have a play with all the features available. For any, queries emai <a href='mailto:info@tool-host.com'>info@tool-host.com</a></p>
         </div>
       </div>
       <div class="home-row">
@@ -76,7 +86,7 @@
     </div>
   </main>
   <div class="footer">
-    Tool Host &copy; 2021 - London, UK - Contact: <a href='mailto:info@tool-host.com'>info@tool-host.com</a>
+    TOOL HOST &copy; 2021 - London, UK - Contact: <a href='mailto:info@tool-host.com'>info@tool-host.com</a>
   </div>
   <script type="text/javascript" src="js/script.js">
 
