--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       <a href="./demo/index.html">DEMO</a>
     </div>
     <div class="content">
-      <div class="row-1">
+      <div class="home-row-1">
         <div class="desc-icons">
           <img src="img/logo_lilla.png" alt="logo">
         </div>
@@ -47,7 +47,7 @@
         </div>
       </div>
 
-      <div class="row">
+      <div class="home-row">
         <div class="desc2">
           <h2>&#128195; Documentation</h2>
           <h4>Learning, troubleshooting and transparency</h4>
@@ -58,15 +58,8 @@
           <h4>Try out the live demo and reach out with any questions!</h4>
           <p>Test the tools in their live environment and have a play with all the features available. For any, queries emai <a href='mailto:info@tool-host.com'>info@tool-host.com</a></p>
         </div>
-        <div class="desc2">
-          <a href="./docs.html">
-            <h2>&#128195; Documentation</h2>
-          </a>
-          <h4>Learning, troubleshooting and transparency</h4>
-          <p>Access to documentation of the tools and undelying open-source libraries for complete control of your analyses and projects.</p>
-        </div>
       </div>
-      <div class="row">
+      <div class="home-row">
         <div class="desc2">
           <a href="./products.html">
             <h2>&#9757; One Unified Framework</h2>
@@ -80,7 +73,7 @@
           <p>The user friendly interface makes modelling easy, accessible and crazy fast.</p>
         </div>
       </div>
-      <div class="row">
+      <div class="home-row">
         <div class="desc2">
           <h2>&#128640; Optimise Your Strategy</h2>
           <h4>Identify the best actions using your data.</h4>
