--- a/index.html
+++ b/index.html
@@ -40,9 +40,9 @@
 
 
           <p class="home-desc">
-            <span>Models</span>,
-            <span>Dashboards</span>, and
-            more...
+            <span>Tools</span>,
+            <span>Code</span> and
+            <span>Docs</span>
           </p>
         </div>
       </div>
