--- a/index.html
+++ b/index.html
@@ -9,19 +9,38 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@200;300;500;800&display=swap" rel="stylesheet">
   <link rel="shortcut icon" href="img/logo_white.png" type="image/x-icon" />
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 
 </head>
 
 <body>
   <main id="container">
     <div id="header" class="header">
-      <a href="./index.html" id="logo">
-        <img src="img/logo_white_wide.png" alt="logo">
-      </a>
-      <a href="./products.html">PRODUCTS</a>
-      <a href="./pricing.html">PRICING</a>
-      <a href="./docs.html">DOC'S</a>
-      <a href="./demo/index.html">DEMO</a>
+      <div class="main_header">
+        <a href="./index.html" id="logo">
+          <img src="img/logo_white_wide.png" alt="logo">
+        </a>
+        <a href="./products.html">PRODUCTS</a>
+        <a href="./pricing.html">PRICING</a>
+        <a href="./docs.html">DOC'S</a>
+        <a href="./demo/index.html">DEMO</a>
+      </div>
+      <div class="mobile_header_button">
+        <span></span>
+        <span></span>
+        <span></span>
+      </div>
+      <div class="mobile_header">
+        <a href="./index.html" id="logo">
+          <img src="img/logo_white_wide.png" alt="logo">
+        </a>
+        <div class="mobile_menu">
+          <a href="./products.html">PRODUCTS</a>
+          <a href="./pricing.html">PRICING</a>
+          <a href="./docs.html">DOC'S</a>
+          <a href="./demo/index.html">DEMO</a>
+        </div>
+      </div>
     </div>
     <div class="content">
       <div class="home-row-1">
